<resources>
    <string name="app_name">OceanV3.1.1</string>
    <string name="appName">OCEAN</string>
    <string name="market">Садовод</string>
    <string name="login_title">Вход</string>
    <string name="login_description">Введите номер телефона, чтобы войти или зарегистрироваться</string>
    <string name="login_phone_number_label">Номер телефона</string>
    <string name="login_continue_btn_text">Продолжить</string>
    <string name="login_user_agreement_title">При входе или регистрации вы принимаете условия пользовательского соглашения.</string>
    <string name="code_title">Код подтверждения</string>
    <string name="code_info">На номер %1$s отправлен код подтверждения в виде SMS-сообщения</string>
    <string name="user_welcome_title">Добро пожаловать в Ocean!</string>
    <string name="user_name_label">Как называется Ваш магазин?</string>
    <string name="user_name_input_label">Название магазина</string>
    <string name="user_market_label">Торговая точка</string>
    <string name="user_row_label">Ряд</string>
    <string name="user_place_label">Павильон</string>
    <string name="user_floor">Этаж</string>
    <string name="user_wa_phone_label">Номер WhatsApp</string>
    <string name="user_tg_phone_label">Номер Telegram</string>
    <string name="choose_image_toolbar_title">Добавить товар в Ocean</string>
    <string name="choose_image_name_label">Наименование</string>
    <string name="choose_image_category_label">Категории</string>
    <string name="choose_image_price_give_label">Цена даю</string>
    <string name="choose_image_price_sale_label">Цена продаю</string>
    <string name="choose_image_cloth_label">Ткань</string>
    <string name="choose_image_sizes_label">Размеры</string>
    <string name="choose_image_market_photo_label">Фото с рынка</string>
    <string name="app_save_text">Сохранить</string>
    <string name="choose_image_sale_place_label">Торговая точка</string>
    <string name="discard">Сбросить</string>
    <string name="apply">Применить</string>
    <string name="choose_category">Выбрать категории</string>
    <string name="category_choose_item_default_text">#платьяотдаши</string>
    <string name="size_choose_toolbar_title">Выбрать размеры</string>
    <string name="profile_post_label">товаров</string>
    <string name="profile_category_label">категории</string>
    <string name="profile_repost_label">репосты</string>
    <string name="profile_description">Краткое описание</string>
    <string name="profile_settings_toolbar_title">Настройки</string>
    <string name="profile_settings_social_link">Добавление | Удаление аккаунтов социальных сетей</string>
    <string name="profile_settings_edit_link">Редактировать профиль</string>
    <string name="profile_settings_place_link">Добавить | Удалить место</string>
    <string name="profile_settings_friends_link">Поделиться с друзьями</string>
    <string name="profile_settings_review_link">Оставить отзыв</string>
    <string name="profile_settings_write_us_link">Написать нам</string>
    <string name="profile_form_name_label">Ваше имя</string>
    <string name="profile_form_shop_name_label">Ваш магазин</string>
    <string name="place_form_toolbar_title">Новое место</string>
    <string name="place_form_pavilion">Павильон</string>
    <string name="place_marker_label">Торговый центр</string>
    <string name="place_edit_toolbar_title">Редактировать место</string>
    <string name="feed_list_item_share_button_text">Поделиться в своих соц. сетях</string>
    <string name="feed_list_item_info_more_label">Подробнее...</string>
</resources>
