<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login_enter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="58dp"
            android:text="@string/login_title"
            android:textColor="@color/colorDarkText"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_annotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:text="@string/login_description"
            android:textColor="@color/colorDarkText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            android:text="@string/login_phone_number_label"
            android:textColor="@color/colorLoginLabel" />

        <EditText
            android:id="@+id/loginPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="+7 (___) ___-__-__"
            android:inputType="phone" />

        <Button
            android:id="@+id/login_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_shadow"
            android:backgroundTintMode="src_atop"
            android:capitalize="none"
            android:text="@string/login_continue_btn_text"
            android:textAllCaps="false"
            android:textColor="@color/colorLightText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login_user_agreement_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="16dp"
            android:text="@string/login_user_agreement_title"
            android:textColor="@color/coloMutedText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>