<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.ChooseImageActivity">

    <LinearLayout
        android:id="@+id/chooseImageLayoutMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/chooseImageToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/choose_image_toolbar_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/chooseImageNameLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_image_name_label"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/chooseImageName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/chooseImageCategoryLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/choose_image_category_label"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/chooseImageCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/spiner_icon_background"
                    android:focusable="false"
                    android:inputType="textMultiLine" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/chooseImagePriceLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/choose_image_price_give_label" />

                        <EditText
                            android:id="@+id/chooseImagePrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:ems="10"
                            android:inputType="number" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/chooseImagePriceSaleLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/choose_image_price_sale_label" />

                        <EditText
                            android:id="@+id/chooseImagePriceSale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:ems="10"
                            android:inputType="number" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/chooseImageClothLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/choose_image_cloth_label"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/chooseImageCloth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:inputType="textMultiLine" />

                <TextView
                    android:id="@+id/chooseImageSizesLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/choose_image_sizes_label"
                    android:textSize="12sp" />
                <EditText
                    android:id="@+id/chooseImageSizes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/spiner_icon_background"
                    android:focusable="false"
                    android:inputType="textMultiLine" />

                <Button
                    android:id="@+id/chooseImageMarketPhotoBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_shadow"
                    android:drawableLeft="@drawable/ic_photo_camera_white_24dp"
                    android:paddingStart="128dp"
                    android:paddingEnd="96dp"
                    android:text="@string/choose_image_market_photo_label"
                    android:textAllCaps="false"
                    android:textColor="@color/colorLightText" />

                <TextView
                    android:id="@+id/chooseImageSalePlaceLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/choose_image_sale_place_label"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/chooseImageSalePlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
    <Button
        android:id="@+id/chooseImageSaveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorButton"
        android:text="@string/app_save_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/colorLightText" />
</androidx.constraintlayout.widget.ConstraintLayout>