<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.UserActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userWelcomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="16dp"
            android:text="@string/user_welcome_title"
            android:textColor="@color/colorDarkText"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:text="@string/user_name_label"
            android:textColor="@color/colorDarkText"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/userNameInputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="16dp"
            android:text="@string/user_name_input_label"
            android:textColor="@color/colorMutedLink"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/userNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="16dp"
            android:ems="25"
            android:hint="basira_shop"
            android:inputType="textPersonName"
            android:textColor="@color/colorDarkText" />

        <TextView
            android:id="@+id/userMarketLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:text="@string/user_market_label" />

        <Spinner
            android:id="@+id/userMarket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/actionModeFindDrawable"
            android:backgroundTintMode="multiply" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>