<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dip"
        android:paddingBottom="10dip">

        <ImageButton
            android:id="@+id/newYieldFormCloseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dip"
            android:background="@color/colorToolbar"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:id="@+id/chooseCategoryToolbarLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/choose_category"
            android:textColor="@color/colorDarkText"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/categoryChooseList"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/categoryChooseCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorButton"
            android:text="@string/discard"
            android:textColor="@color/colorLightText" />

        <Button
            android:id="@+id/categoryChooseApplyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorButton"
            android:text="@string/apply"
            android:textColor="@color/colorLightText" />
    </LinearLayout>
</LinearLayout>
