<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.CategoryChooseActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorButton"
        android:backgroundTintMode="src_over"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/categoryChooseToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/choose_category" />

        <ListView
            android:id="@+id/categoryChooseList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/categoryChooseDiscardBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorButton"
            android:backgroundTint="@color/colorButton"
            android:backgroundTintMode="src_over"
            android:drawableStart="@drawable/ic_discard_black_24dp"
            android:paddingStart="16dp"
            android:text="@string/discard"
            android:textAlignment="center"
            android:textColor="@color/colorLightText" />

        <Button
            android:id="@+id/categoryChooseApplyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorButton"
            android:backgroundTint="@color/colorButton"
            android:backgroundTintMode="src_over"
            android:drawableStart="@drawable/ic_check_white_24dp"
            android:paddingStart="16dp"
            android:text="@string/apply"
            android:textAlignment="center"
            android:textColor="@color/colorLightText" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/categoryChooseProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateTint="@color/colorButton"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>